# abelian-sandpile-model

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  interactor.cpp  interactor.h  renderer.cpp  renderer.h  simulator.cpp  simulator.h
lib/renderer/: renderer.cpp  renderer.h
